# eventhub-otlp-mapper

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
config/: mapping.yaml
docs/: azure_integration.md
examples/: sample_events.json  sample_metrics.json  sample_traces.json
src/eventhub_otel_mapper/: __init__.py  config_validator.py  consumer.py  main.py  metric_exporter.py  schema_mapper.py  trace_generator.py
tests/: test_config_validator.py  test_schema_mapper.py  test_trace_generator.py
