[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventhub-otlp-mapper"
version = "0.1.5"
description = "Map Azure EventHub messages to OpenTelemetry Traces and Metrics"
authors = [{ name = "Rafael Yilmaz", email = "rafael.yilmaz@icloud.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "azure-eventhub>=5.12",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "azure-monitor-opentelemetry-exporter>=1.0.0b1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6",
    "fastavro>=1.9",
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
eventhub-otlp-mapper = "eventhub_otel_mapper.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E9", "F821", "F822", "F823"]
